# therm_flask

./: .gitignore  LICENSE  README.md  app.py  cgi.py  config.json  config.py  config.py.sample  import.py  labmon_config.json  pyproject.toml  temp_log.py  test.py
html/: index.html
html/css/: smartadmin-production.min.css  smartadmin-skins.min.css  therm.css
html/includes/: footer.html  header.html  highcharts.html  left-panel.html  ribbon.html  thermtable.html  titlebar.html
html/js/: app.config.js  app.functions.js  app.types.js
html/js/ng/: ng.app.js  ng.controllers.js  ng.directives.js  ng.modules.js
html/views/: fridge-separate.html
labmon/: __init__.py  app.py  cgi.py  config.py  fridge_data.py  temp_log.py  upload.py  wsgi.py
labmon/config/: __init__.py  __main__.py  config.py
labmon/db/: __init__.py  abc.py  db.py  fridge_table.py  fridges.py  sensors.py
labmon/templates/: blank.html  data_legacy.csv
labmon/uploaders/: AVS47.py  bluefors.py  bluefors_common.py  bluefors_cp.py  bluefors_mg.py  bluefors_tc.py  bluefors_upload.py  cryomech.py  lakeshore_336.py  leiden_tc.py  pfeiffer_maxigauge.py  sample.py  upload.py  uploader.py
labmon/utility/: __init__.py  calibrations.py  hilbert.py  logging.py  retry.py  si_prefix.py  timers.py
scripts/: legacy_csv_import.py  migrate_tables.sql  update_fridge_schema.py
scripts/BlueFors Scripts/: FP_Monitor.py  TC_monitor.py
scripts/Leiden Scripts/: FP_Monitor.py  PV_Monitor.py  TC_monitor.py
setup/: therm-flask.service  uwsgi.ini
setup/uwsgi/: uwsgi.fc  uwsgi.if  uwsgi.sh  uwsgi.te  uwsgi_selinux.8
static/: index.html
static/css/: bootstrap.min.css  smartadmin-production.min.css  smartadmin-skins.min.css  therm.css
static/includes/: footer.html  header.html  highcharts.html  left-panel.html  thermtable.html  titlebar.html
static/js/: app.config.js  app.functions.js  app.js  app.types.js
static/js/ng/: ng.app.js  ng.controllers.js  ng.directives.js  ng.modules.js
static/js/plugin/bootstrap-slider/: bootstrap-slider.min.js
static/js/plugin/bootstrap-wizard/: jquery.bootstrap.wizard.min.js
static/js/plugin/jquery-touch/: jquery.ui.touch-punch.min.js
static/js/plugin/jquery-validate/: jquery.validate.min.js
static/js/plugin/msie-fix/: jquery.mb.browser.min.js
static/views/: fridge-combined.html  fridge-historic.html  fridge-separate.html
templates/: data_single.csv
tests/: bluefors_upload.py  test_db.py  test_hilbert.py
