[tool.poetry]
name = "labmon"
version = "0.1.0"
description = "Flask module for running thermomtry in QNL/QSYD lab"
authors = ["Sebastian Pauka <spauka@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
sqlalchemy = "^2.0.36"
psycopg = "^3.2.3"
dataclass-wizard = "^0.33.0"
flask-sqlalchemy = "^3.1.1"

[tool.poetry.group.uwsgi]
optional = true

[tool.poetry.group.uwsgi.dependencies]
uwsgi = "^2.0.28"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
