[tool.poetry]
name = "labmon"
version = "0.1.0"
description = "Flask module for running thermomtry in QNL/QSYD lab"
authors = ["Sebastian Pauka <spauka@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dataclass-wizard = "^0.33.0"
httpx = {extras = ["http2"], version = "^0.28.1"}
colorama = "^0.4.6"

[tool.poetry.group.uwsgi]
optional = true

[tool.poetry.group.uwsgi.dependencies]
uwsgi = "^2.0.28"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
black = "^24.10.0"


[tool.poetry.group.server.dependencies]
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
psycopg = "^3.2.4"
sqlalchemy = "^2.0.37"

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true
# Set the line length limit used when formatting code snippets in
# docstrings.
docstring-code-line-length = "dynamic"

[tool.pyright]
include = ["labmon"]
exclude = ["**/__pycache__"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

